New impl of URLName and revised test
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@43885 13f79535-47bb-0310-9956-ffa450edef68